--- a/_includes/add_this.html
+++ b/_includes/add_this.html
@@ -4,16 +4,20 @@
         }
 </script>
 
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js"></script>
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-571a96a3a515f05b"></script>
 
 <div class="addthis_sharing_toolbox"></div>
+
 <script type="text/javascript">
   var addthis_share = addthis_share || {}
   addthis_share = {
-  	passthrough : {
-  		twitter: {
-			via: "{{ site.social.twitter }}"
-  		}
-  	}
+    passthrough : {
+      twitter: {
+      via: "{{ site.social.twitter }}"
+      }
+    }
   }
 </script>
+
+
+
