--- a/_includes/add_this.html
+++ b/_includes/add_this.html
@@ -1,12 +1,16 @@
 <script type="text/javascript">
   var addthis_config = {
-              pubid: "{{ site.social.addthis_pubid }}"
+              pubid: "{{ site.social.addthis_pubid }}",
+              data_use_cookies: false,
+              data_use_flash: false
         }
 </script>
 
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-571a96a3a515f05b"></script>
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js"></script>
 
 <div class="addthis_sharing_toolbox"></div>
+
+
 
 <script type="text/javascript">
   var addthis_share = addthis_share || {}
@@ -18,6 +22,3 @@
     }
   }
 </script>
-
-
-
